...
      builder: (context, viewModel) {
        return ScreenScaffold(
          body: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              AppToolbar(
                title: "Login",
                backButtonEnabled: viewModel is! AuthLoadingViewModel,
                onBackButtonPressed: () => Navigator.pop(context),
                scrollController: scrollController,
                padding: ClientConfig.getCustomClientUiSettings().defaultScreenHorizontalPadding,
                actions: const [
                  AppbarLogo(),
...
                          tabs: [
                            const TabViewItem(
                              text: "Mobile",
                              child: PhoneNumberLoginForm(),
                            ),
                            TabViewItem(
                              text: "Email",
                              child: EmailLoginForm(
                                viewModel: viewModel,
                              ),
                            ),
                          ],
                        ),
...
                      },
                    ),
                    const SizedBox(
                      height: 24,
                    ),
                    IvoryTextField(
                      label: "Password",
                      placeholder: 'Password',
                      controller: _passwordInputController,
                      onChanged: (inputValue) {},
                      keyboardType: TextInputType.visiblePassword,
                    ),
                    const SizedBox(
...
                    ),
                    SizedBox(
                      child: ListenableBuilder(
                        listenable: _continueButtonController,
                        builder: (context, child) {
                          return Button(
                            text: 'Continue',
                            disabledColor: ClientConfig.getCustomColors().neutral300,
                            color: ClientConfig.getColorScheme().tertiary,
                            textColor: ClientConfig.getColorScheme().surface,
                            isLoading: viewModel is AuthLoadingViewModel,
                            onPressed: _continueButtonController.isEnabled
                                ? () async {
...
                        } else {
                          return const SizedBox(height: 8);
                        }
                      },
                    ),
                    IvoryTextField(
                      label: 'Email address',
                      placeholder: 'Email address',
                      controller: _emailInputController,
                      focusNode: _emailFocusNode,
                      inputType: TextFieldInputType.email,
                    ),
                    const SizedBox(
...
