...
                  ),
                  Column(
                    children: [
                      SizedBox(
                        width: double.infinity,
                        child: PrimaryButton(
                          text: "Log in",
                          onPressed: () async {
                            Navigator.pushNamedAndRemoveUntil(
                              context,
                              LoginScreen.routeName,
                              ModalRoute.withName(WelcomeScreen.routeName),
                            );
...
