...
        child: Column(
          children: [
            const SingleChildScrollView(
              child: Column(
                children: [
                  Text(
                    "Welcome to SolarisDemo!",
                    style: TextStyle(
                      fontSize: 24,
                      fontWeight: FontWeight.bold,
                    ),
                  ),
                  SizedBox(height: 20),
...
