...
  }
}

class LoginErrorMessage {
  static const wrongTan = "Wrong TAN";
  static const unknownError = "Unknown error";
  static const wrongUsernameOrPassword = "Wrong username or password";
}

