...
                        return 'Please enter your last name';
                      }
                      return null;
                    },
                  ),
                  PlatformTextInput(
                    textLabel: "Email Address",
                    hintText: "e.g john.doe@email.com",
                    keyboardType: TextInputType.emailAddress,
                    onChanged: (value) {
                      setState(() {
                        _inputEmail = value;
                      });
...
